--- a/.gitignore
+++ b/.gitignore
@@ -128,6 +128,10 @@ dmypy.json
 # Pyre type checker
 .pyre/
 
+# vim
+*.swp
+*.swo
+
 # more
 *.msh
 *.pkl
@@ -137,3 +141,5 @@ dmypy.json
 /.vim
 img/*
 !img/.gitkeep
+
+
